--- a/styles.css
+++ b/styles.css
@@ -9,3 +9,147 @@
     --textbox-background: rgba(255, 255, 255, 0.1);
     --close-x-color: rgba(255, 255, 255, 0.35);
 }
+
+body,
+html {
+    height: 100%;
+    width: 100%;
+    display: grid;
+    place-items: center;
+    background: linear-gradient(#9887ee, #6d50ff);
+}
+
+*,
+*::before,
+*::after {
+    box-sizing: border-box;
+    font-family: 'DM Sans', sans-serif;
+}
+
+.modal {
+    width: 30vw;
+    background: var(--background);
+    padding: 48px 32px;
+    border-radius: 15px;
+    box-shadow: 0px 3px 25px #0005;
+    position: relative;
+    height: 0;
+    padding-block: 0;
+    opacity: 0;
+    overflow: hidden;
+    transition: height 0.5s cubic-bezier(0.075, 0.82, 0.165, 1), padding 0.5s cubic-bezier(0.075, 0.82, 0.165, 1), opacity 0.5s ease;
+}
+
+button#close-modal {
+    position: absolute;
+    top: 1rem;
+    right: 1rem;
+    height: 2rem;
+    width: 2rem;
+    border-radius: 50%;
+    border: none;
+    outline: none;
+    cursor: pointer;
+    background: transparent;
+    opacity: .35;
+}
+
+button#close-modal:hover {
+    opacity: 1;
+}
+
+button#close-modal .bar {
+    width: 1rem;
+    height: 2px;
+    background: var(--header-color);
+    transform: translate(-50%, -50%) rotateZ(45deg);
+    position: absolute;
+    top: 50%;
+    left: 50%;
+}
+
+button#close-modal .bar:last-of-type {
+    transform: translate(-50%, -50%) rotateZ(-45deg);
+}
+
+.modal h2 {
+    color: var(--header-color);
+    font-size: 1.75rem;
+    margin: 0;
+}
+
+.modal p {
+    color: var(--text-color);
+    text-align: center;
+    font-size: 1rem;
+    margin: 0;
+}
+
+.modal .stars {
+    display: flex;
+    gap: .5rem;
+    align-items: center;
+}
+
+.screen {
+    display: flex;
+    width: 100%;
+    padding-inline: 32px;
+    flex-direction: column;
+    gap: 1.5rem;
+    align-items: center;
+    transform: translateX(100%) translateY(-50%);
+    position: absolute;
+    top: 50%;
+    left: 0;
+    vertical-align: middle;
+    opacity: 0;
+    transition: transform 0.5s cubic-bezier(0.075, 0.82, 0.165, 1), opacity 0.4s ease;
+}
+
+.screen.show {
+    transform: translateX(0) translateY(-50%);
+    opacity: 1;
+}
+
+.screen.left {
+    transform: translateX(-100%) translateY(-50%);
+    opacity: 0;
+}
+
+.screen textarea {
+    width: 100%;
+    background: var(--textbox-background);
+    border: none;
+    border-radius: 10px;
+    height: 15vh;
+    resize: none;
+    outline: none;
+    color: var(--text-color);
+    padding: 16px;
+    font-size: 1rem;
+}
+
+.screen textarea::placeholder {
+    color: var(--text-color);
+}
+
+.screen button {
+    border: none;
+    outline: none;
+    cursor: pointer;
+    background: var(--btn-background);
+    padding: 1rem 0;
+    width: 100%;
+    color: var(--header-color);
+    font-size: 1rem;
+    font-weight: 500;
+    border-radius: 10px;
+}
+
+.screen .inline-stars {
+    display: inline-flex;
+    gap: .25rem;
+    transform: scale(0.85);
+    vertical-align: -30%;
+}
